--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://4627abdd-3473-435e-b584-0308dd257186.preview.emergentagent.com
 WDS_SOCKET_PORT=443
